# OpenNivara

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  .taplo.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  lychee.toml  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  quality.yml  tauri-e2e.yml
desktop/: .gitignore  biome.json  knip.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.tauri.conf.ts
desktop/.storybook/: main.ts  preview.tsx
desktop/scripts/: run-tauri-smoke-prebuilt.mjs
desktop/src/: App.tsx  index.css  main.tsx  router.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: README.md  STATUS.md  context-compiler.md  development-quality-gates.md  feature-implementation-contract.md  known-limitations.md  location-context.md  memory-architecture.md  memory-correction-model.md  memory-graph.md  memory-privacy.md  memory-testing-strategy.md  privacy-and-data-flow.md  release-checklist.md  runtime-context.md  security-model.md  store-themes-only.md  testing-strategy.md
docs-site/: docs.json  index.mdx  installation.mdx  package.json  quickstart.mdx
docs-site/changelog/: index.mdx
docs-site/cli/: commands.mdx  overview.mdx  sessions.mdx  telegram.mdx  workspace-map.mdx
docs-site/concepts/: context-compiler.mdx  contexts-goals.mdx  life-memory.mdx  location-context.mdx  memory-graph.mdx  (+4 more)
schemas/: skill-evaluation.schema.json  skill-manifest.schema.json  skill-pack.schema.json
scripts/: check-no-obsolete-skill-generator.mjs  docs-link-check.mjs  docs-site-check.mjs  generate_india_skill_packs.py
src/: bindings.rs  config_paths.rs  config_store.rs  context.rs  context_selector.rs  daemon.rs  engine.rs  engine_foundation.rs  error.rs  first_run.rs  lib.rs  llm.rs  main.rs  preferences.rs  profile.rs  remote_policy.rs  secrets.rs  service.rs  sessions.rs  style.rs  telegram.rs  tool_operation_policy.rs  tool_preview.rs  tools.rs
tests/: engine_foundation_contract.rs  model_contract.rs  tool_operation_policy_contract.rs  tool_preview_contract.rs
(+349 files in other folders)
